--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,10 @@
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
+  "overrides": {
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.31"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
