--- a/package.json
+++ b/package.json
@@ -9,23 +9,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
+    "bcryptjs": "^3.0.3",
+    "dotenv": "^17.2.3",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^8.2.1",
     "express-xss-sanitizer": "^2.0.1",
-    "helmet": "^4.6.0",
-    "http-status-codes": "^2.1.4",
-    "joi": "^17.4.0",
-    "jsonwebtoken": "^8.5.1",
+    "helmet": "^8.1.0",
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.3",
     "moment": "^2.30.1",
-    "mongoose": "^6.13.8",
-    "rate-limiter": "^0.2.0",
-    "sprintf-js": "^1.1.3"
+    "mongoose": "^9.1.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.9"
+    "nodemon": "^3.1.11"
   }
 }
